# IRIS-2022

./: .gitignore  README.md  controls.md
basic_sim/: colcon.pkg  package.xml  setup.cfg  setup.py
basic_sim/basic_sim/: ModelSpawner.py  __init__.py  rock_spawner.py
basic_sim/config/: rover_depth_camera_view.rviz
basic_sim/hook/: basic_sim_hook.sh
basic_sim/launch/: arena.launch.py  arena_world.launch.py  empty_arena.launch.py  rviz2.launch.py  teleop_keyboard.launch.py
basic_sim/models/arena_walls/: model.config  model.sdf
basic_sim/models/default_ground/: model.config  model.sdf
basic_sim/models/realsense_d455/: model.config  model.sdf
basic_sim/models/rover/: model.config  model.sdf
basic_sim/worlds/: arena.world  arena2.sdf
basic_sim/worlds/arena_walls/: model.sdf
control/arduino/: checksum.cpp
jetson/: package.xml  setup.py
jetson/jetson/: image_pub.py  image_sub.py  twist_serial.py  webcam_pub.py  webcam_sub.py
jetson/launch/: jetson_launch.py
joystick_sub/: package.xml  setup.cfg  setup.py
joystick_sub/joystick_sub/: subscriber.py
minimal_talk_listen/log/: latest_build
nav-sim/: package.xml  setup.cfg  setup.py
nav_sim/: package.xml  setup.cfg  setup.py
nav_sim/models/: differential_robot.urdf
nav_sim_c/: CMakeLists.txt  package.xml
nav_sim_c/launch/: display.launch.py
nav_sim_c/models/: differential_robot.urdf
pubsub v1/install/: local_setup.sh  setup.sh
py_pubsub/: setup.py
teleop/: setup.py
teleop/launch/: teleop_launch.py
test_pkg/: package.xml  setup.py
vision/: package.xml  setup.py
(+19 files in other folders)
