<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_sim</name>
  <version>0.0.0</version>
  <description>A basic ros2/gazebo simulation package for the NASA RMC Arena</description>
  <maintainer email="iris.uiuc@gmail.com">Illinois Robotics in Space Team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>navigation2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!--
  <exec_depend>ros-galactic-navigation2</exec_depend>
  <exec_depend>ros-galactic-nav2-bringup</exec_depend>
  <exec_depend>ros-galactic-spatio-temporal-voxel-layer</exec_depend>
  <build_depend>ros-galactic-slam-toolbox</build_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
